--- a/generators/app/templates/package.json
+++ b/generators/app/templates/package.json
@@ -15,6 +15,7 @@
         "@types/react": "17.0.37",
         "@types/react-dom": "17.0.11",
         "@types/eslint": "8.2.1",
+        "@types/node": "16.11.12",
         "vite": "2.7.1",
         "@vitejs/plugin-react": "1.1.1",
         "eslint": "8.4.1",
