--- a/generators/app/templates/package.json
+++ b/generators/app/templates/package.json
@@ -7,23 +7,23 @@
         "format": "prettier --write \"**/*.{ts,tsx,js,json,yml}\""
     },
     "dependencies": {
-        "typescript": "4.5.3",
         "react": "17.0.2",
-        "react-dom": "17.0.2"
+        "react-dom": "17.0.2",
+        "typescript": "4.5.4"
     },
     "devDependencies": {
-        "@types/react": "17.0.37",
+        "@types/eslint": "8.2.2",
+        "@types/node": "17.0.8",
+        "@types/react": "17.0.38",
         "@types/react-dom": "17.0.11",
-        "@types/eslint": "8.2.1",
-        "@types/node": "16.11.12",
-        "vite": "2.7.1",
-        "@vitejs/plugin-react": "1.1.1",
-        "eslint": "8.4.1",
-        "@typescript-eslint/eslint-plugin": "5.6.0",
-        "@typescript-eslint/parser": "5.6.0",
-        "eslint-plugin-react": "7.27.1",
+        "@typescript-eslint/eslint-plugin": "5.9.1",
+        "@typescript-eslint/parser": "5.9.1",
+        "@vitejs/plugin-react": "1.1.4",
+        "eslint": "8.6.0",
+        "eslint-plugin-react": "7.28.0",
         "eslint-plugin-react-hooks": "4.3.0",
         "ts-node": "10.4.0",
-        "typescript": "4.5.3"
+        "typescript": "4.5.3",
+        "vite": "2.7.10"
     }
 }
